# crm

./: DEPLOY.md  ENTORNO_DE_DEV.md  FRONTEND_CURRENT_STATE.md  README.md  console.md  correcciones al crm.md  export_git__md.py  historial_completo_para_gpt_crm.md  lab_deploy.md  lab_start.bat  microtv-crm-ycc.code-workspace
auth.microtv.ar/backend/: .env.e2e-lab.backup  .env.example  Dockerfile.local-db  alembic.ini  pyproject.toml
microtv-crm-backend/: .env  .env.example  .gitignore  README.md  debug_test.db  docker-compose.auth-local.yml  microtv_crm.db  pyproject.toml
microtv-crm-backend/sql/: 20260414_task_media_comment_link.sql  20260414_task_schema_v4_1_hardening.sql  20260414_task_schema_v4_1_post_validation.sql  20260414_task_schema_v4_delta.sql  20260422_ticket_module.sql  20260423_crm_notifications.sql  20260427_ticket_arrival_comment.sql  20260428_notifications_seed.sql  20260430_ticket_profile_enhancements.sql  20260508_task_preform_satisfaction_extension.sql  20260511_notification_rules_ddl.sql  20260512_inventory_product_enhancements.sql  20260512_permissions_and_activity_log.sql  20260512_push_subscriptions.sql  20260513_auth_user_create_non_admin_permission.sql  20260513_reassign_permissions_all_roles.sql  20260513_task_extra_materials.sql  20260513_ticket_required_materials.sql  20260514_comment_mentions.sql  20260514_stock_import_backups.sql  20260516_editable_template_item_history_refs.sql  20260516_task_template_pre_form_assignment_columns.sql  20260518_ticket_comment_location.sql  20260520_crm_categories.sql  20260520_crm_categories_fk_fix.sql  (+6 more)
(+682 files in other folders)
