[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "microtv-crm-backend"
version = "0.1.0"
description = "Initial FastAPI backend for the MicroTV CRM."
requires-python = ">=3.12"
dependencies = [
    "email-validator>=2.2,<3.0",
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.34,<1.0",
    "sqlalchemy>=2.0,<3.0",
    "psycopg[binary]>=3.2,<4.0",
    "python-multipart>=0.0.20,<1.0",
    "pydantic-settings>=2.9,<3.0",
    "httpx>=0.28,<1.0",
    "pyjwt>=2.10,<3.0",
    "python-dotenv>=1.1,<2.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3,<9.0",
    "httpx>=0.28,<1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
